--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 ================================================== -->
  <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
               <img src="{{ site.baseurl }}/images/noun_Mosquito_19603cb.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Global Mosquito Alert</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,13 +11,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="guides">Guides</a>
+              <a class="nav-link" href="/pillars">Pillars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Additional Resources</a>
+              <a class="nav-link" href="/guides">Guides</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="/directory">Directory</a>
             </li>
           </ul>
         </div>
