--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,16 +11,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
+              <a class="nav-link" href="/about/">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pillars">Pillars</a>
+              <a class="nav-link" href="/pillars/">Pillars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/guides">Guides</a>
+              <a class="nav-link" href="/guides/">Guides</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/directory">Directory</a>
+            <a class="nav-link" href="/directory/">Directory</a>
             </li>
           </ul>
         </div>
